--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/onabee/The-Little-Things#readme",
   "dependencies": {
+    "bower": "^1.7.2",
     "dotenv": "^2.0.0",
     "ejs": "^2.3.4",
     "fs": "0.0.2",
