--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "bower install",
     "start": "node app.js"
   },
   "repository": {
@@ -26,6 +27,7 @@
     "dotenv": "^2.0.0",
     "ejs": "^2.3.4",
     "fs": "0.0.2",
+    "method-override": "^2.3.5",
     "morgan": "^1.6.1",
     "querystring": "^0.2.0"
   },
