--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
   },
   "homepage": "https://github.com/onabee/The-Little-Things#readme",
   "dependencies": {
+    "body-parser": "^1.14.2",
     "bower": "^1.7.2",
     "dotenv": "^2.0.0",
     "ejs": "^2.3.4",
+    "express": "4.13.4",
     "fs": "0.0.2",
     "method-override": "^2.3.5",
     "morgan": "^1.6.1",
+    "path": "^0.12.7",
     "querystring": "^0.2.0"
   },
   "devDependencies": {
